--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,10 +22,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:padding="10dp"
             android:text="@string/login_btn"
             android:textColor="@color/white"
-            android:textSize="26sp"/>
+            android:textSize="26sp" />
     </FrameLayout>
 </layout>
