--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -16,8 +16,10 @@
   -->
 
 <resources>
-    <array name="fact_type">
-        <item>@string/fact_type_android</item>
+    <array name="quotes_type">
+        <item>@string/quote_type</item>
+        <!--
         <item>@string/fact_type_california</item>
+        -->
     </array>
 </resources>
