--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <ListPreference
-        app:key="@string/preference_fact_type_key"
+        app:key="@string/preference_quotes_key"
         app:title="@string/settings_fact_type_title"
-        app:entries="@array/fact_type"
-        app:entryValues="@array/fact_type"
-        app:defaultValue="@string/fact_type_android"
+        app:entries="@array/quotes_type"
+        app:entryValues="@array/quotes_type"
+        app:defaultValue="@string/quote_type"
         app:useSimpleSummaryProvider="true"/>
 </PreferenceScreen>
