--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_detail"
+        android:title="@string/check_detail" />
+    <item
         android:id="@+id/action_logout"
         android:title="@string/logout_button_text" />
 </menu>
