Updated the UI for add page regarding to the habit type selection

--- a/app/src/main/res/layout/fragment_add_habit.xml
+++ b/app/src/main/res/layout/fragment_add_habit.xml
@@ -129,7 +129,7 @@
             android:layout_width="374dp"
             android:layout_height="29dp"
             android:layout_weight="1"
-            android:text="Attr1"
+            android:text="Date"
             app:layout_constraintBottom_toTopOf="@+id/habitAttr1Label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/habit_type_label" />
@@ -139,7 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Attr2"
+            android:text="Time"
             app:layout_constraintBottom_toTopOf="@+id/habitAttr2Label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +150,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Attr3"
+            android:text="Distance"
             app:layout_constraintBottom_toTopOf="@+id/habitAttr3Label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
